@startuml

title __LIBRARY's Class Diagram__\n

  namespace com.kanzu.flibook {
    namespace ui.library {
      class com.kanzu.flibook.ui.library.LibraryFragment {
          + context : Activity
          ~ fileNames : ArrayList<String>
          ~ list : ListView
          ~ names : ArrayList<String>
          {static} - LOG_TAG : String
          - folioReader : FolioReader
          + getIdentifier()
          + onCreateView()
          + onDestroy()
          + onFolioReaderClosed()
          + onHighlight()
          + onResume()
          + reloadAdapter()
          + saveReadLocator()
          + searchForFiles()
          - getHighlightsAndSave()
          - getLastReadLocator()
          - loadAssetTextAsString()
      }
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.library {
      class com.kanzu.flibook.ui.library.LibraryViewModel {
          - mText : MutableLiveData<String>
          + LibraryViewModel()
          + getText()
      }
    }
  }
  

  com.kanzu.flibook.ui.library.LibraryFragment .up.|> com.folioreader.FolioReader.OnClosedListener
  com.kanzu.flibook.ui.library.LibraryFragment .up.|> com.folioreader.util.OnHighlightListener
  com.kanzu.flibook.ui.library.LibraryFragment .up.|> com.folioreader.util.ReadLocatorListener
  com.kanzu.flibook.ui.library.LibraryFragment -up-|> androidx.fragment.app.Fragment
  com.kanzu.flibook.ui.library.LibraryFragment o-- com.kanzu.flibook.CustomFileListAdapter : adapter
  com.kanzu.flibook.ui.library.LibraryFragment o-- com.kanzu.flibook.databinding.FragmentLibraryBinding : binding
  com.kanzu.flibook.ui.library.LibraryFragment o-- com.kanzu.flibook.ui.library.LibraryViewModel : libraryViewModel
  com.kanzu.flibook.ui.library.LibraryViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
